src/objects/Collections_Quality_Check__c.object
<CustomObject>
    <fields>
        <fullName>FURTHER_PROBING_Where_applicable_did_t__c</fullName>
        <inlineHelpText>FURTHER PROBING - Where applicable did the agent ask the customer about source of funds?</inlineHelpText>
        <label>FURTHER PROBING - Source of funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FUTURE_PAYMENTS_Where_possible_did_the__c</fullName>
        <inlineHelpText>FUTURE PAYMENTS: Where possible, did the agent make sufficient steps with the customer to avoid them missing future payments? E.g. how to set up new DD, changing repayment date.</inlineHelpText>
        <label>FUTURE PAYMENTS: Advice given ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_difficulties_Correct_process__c</fullName>
        <inlineHelpText>Financial difficulties - Was the correct process followed when dealing with customers in financial difficulties? This is for every step in the process such as the initial probing stage to confirm the financial situation, signposting and the 30 day hold on</inlineHelpText>
        <label>Financial difficulties -Correct process?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follows_the_correct_process_for_hardship__c</fullName>
        <inlineHelpText>Follows the correct process for hardship cases (signposting customer to free help and advice such as Stepchange etc)</inlineHelpText>
        <label>Follows the correct process for hardship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HARDSHIP_FINANCIAL_DIFFICULTIES__c</fullName>
        <inlineHelpText>HARDSHIP/ FINANCIAL DIFFICULTIES: Was this recognised and external help details provided whilst giving a 30 day hold?</inlineHelpText>
        <label>Hardship/Financial Difficult: recognised</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InboundCalculation__c</fullName>
        <description>Calculation for the inbound call collections scorecard</description>
        <formula>IF(ISPICKVAL( Did_the_agent_mention_the_company__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL( Agent_asked_customer_how_they_could_help__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Was_Data_Protection_Policy_adhered_to__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  ACCOUNT_INFORMATION_Did_the_agent_check__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  REASON_FOR_MISSED_PAYMENT__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  FURTHER_PROBING_Did_the_agent_ask_suffi__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  FURTHER_PROBING_Where_applicable_did_t__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  FURTHER_PROBING_Priority_bills__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  ARREARS_BALANCE_Did_the_agent_inform_th__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  REPAYMENT_METHODS_Offered__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  CONSEQUENCES_Did_the_agent_advise__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(  FUTURE_PAYMENTS_Where_possible_did_the__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   ARRANGEMENT_Set_Correctly__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   Did_the_agent_address_customer_queries__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(    Did_the_agent_offer_all_relevant_info__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_the_agent_avoid_offering_financial_a__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_the_agent_make_accurate_and_relevant__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(     HARDSHIP_FINANCIAL_DIFFICULTIES__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     FINANCIAL_DIFFICULTIES_Was_th__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Telephony_skills__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Overview_of_the_call_content_provided__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Agent_offered_further_assistance__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     polite_and_professional_manner__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_the_agent_sound_welcoming__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Was_the_agent_actively_listening__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_the_agent_display_understanding__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     COMPLAINT_handled_correctly__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     WAS_THE_CALL_COMPLIANT_Full_DPA_etc__c   , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InboundCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InboundPercent__c</fullName>
        <description>Calculates the percentage score for an inbound call collections quality check</description>
        <formula>InboundCalculation__c /27</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InboundPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manage_payment_plan_section_updated__c</fullName>
        <inlineHelpText>Was the &apos;manage payment plan&apos; section updated accordingly and contain the correct information about the arrangement</inlineHelpText>
        <label>&apos;Manage payment plan&apos; section updated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moved_to_arrangement_status__c</fullName>
        <inlineHelpText>Was the account moved to &apos;arrangement status&apos; after the arrangement was accepted?</inlineHelpText>
        <label>Moved to &apos;arrangement status&apos; ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOSA_sent_within_6_months__c</fullName>
        <inlineHelpText>DEFAULT NOTICE - Was a NOSA sent within 6 months before notice of default being issued?</inlineHelpText>
        <label>Was NOSA sent within 6 months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_Created_for_every_action__c</fullName>
        <inlineHelpText>Notes – Were notes created for every action and recorded accurately, in good detail and in a timely manner?</inlineHelpText>
        <label>Notes – Created for every action ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offers_additional_assistance__c</fullName>
        <inlineHelpText>Offers additional assistance</inlineHelpText>
        <label>Offers additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offers_correct_solution_explanation__c</fullName>
        <inlineHelpText>Offers correct solution/explanation</inlineHelpText>
        <label>Offers correct solution/explanation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutboundCalculation__c</fullName>
        <formula>IF(ISPICKVAL( Did_the_agent_mention_the_company__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Agent_mentioned_calls_are_recorded__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL( Was_Data_Protection_Policy_adhered_to__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Pre_DPA_agent_avoid_disclosing_any_info__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL( ACCOUNT_INFORMATION_Did_the_agent_check__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( REASON_FOR_MISSED_PAYMENT__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FURTHER_PROBING_Did_the_agent_ask_suffi__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( ARREARS_BALANCE_Did_the_agent_inform_th__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( REPAYMENT_METHODS_Offered__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CONSEQUENCES_Did_the_agent_advise__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FUTURE_PAYMENTS_Where_possible_did_the__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( ARRANGEMENT_Set_Correctly__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_address_customer_queries__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_offer_all_relevant_info__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_avoid_offering_financial_a__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_make_accurate_and_relevant__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( HARDSHIP_FINANCIAL_DIFFICULTIES__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FINANCIAL_DIFFICULTIES_Was_th__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Telephony_skills__c  , &quot;No&quot;),0,11)+
IF(ISPICKVAL( Overview_of_the_call_content_provided__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Agent_offered_further_assistance__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( polite_and_professional_manner__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_sound_welcoming__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Did_the_agent_display_understanding__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Was_the_agent_actively_listening__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COMPLAINT_handled_correctly__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( WAS_THE_CALL_COMPLIANT_Full_DPA_etc__c  , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OutboundCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutboundPercent__c</fullName>
        <description>Calculates the percentage score for an outbound call collections quality check</description>
        <formula>OutboundCalculation__c /36</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OutboundPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overview_of_the_call_content_provided__c</fullName>
        <inlineHelpText>Was an overview of the call content provided?</inlineHelpText>
        <label>Overview of the call content provided ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_Part_Promise_acc_review_on_time__c</fullName>
        <inlineHelpText>PAYMENT - If partial payment was made, or customer promised payments, was the account reviewed at the right time?</inlineHelpText>
        <label>PAYMENT Part/Promise acc review on time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYMENT_correct_payment_and_amount__c</fullName>
        <inlineHelpText>PAYMENT - Was payment actioned? If so was the correct payment actioned and the correct amount added</inlineHelpText>
        <label>PAYMENT Correct payment and amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Polite_Greeting__c</fullName>
        <inlineHelpText>Uses a polite greeting which includes the customers name (Mr/Mrs X or the first name depending on subject/tone)</inlineHelpText>
        <label>Polite Greeting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positive_Professional_language__c</fullName>
        <inlineHelpText>Uses positive, professional language and appropriate tone throughout. Avoids jargon and company specifc</inlineHelpText>
        <label>Positive,Professional,Appropriate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_DPA_agent_avoid_disclosing_any_info__c</fullName>
        <inlineHelpText>Did the agent avoid disclosing any information to the customer until after confirming security questions?</inlineHelpText>
        <label>Pre DPA agent avoid disclosing any info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REASON_FOR_MISSED_PAYMENT__c</fullName>
        <inlineHelpText>REASON FOR MISSED PAYMENT: Did the agent ask or find out why the payment was missed?</inlineHelpText>
        <label>REASON FOR MISSED PAYMENT:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REPAYMENT_METHODS_Offered__c</fullName>
        <inlineHelpText>REPAYMENT METHODS: Were different repayment methods offered to customer where possible and were necessary direct debit details discussed and confirmed correctly if one is not in place??</inlineHelpText>
        <label>REPAYMENT METHODS: Offered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rationale_behind_why_we_require_info__c</fullName>
        <inlineHelpText>Provides rationale behind why we require certain information?</inlineHelpText>
        <label>Rationale behind why we require info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responded_to_the_registered_email__c</fullName>
        <inlineHelpText>Did the agent respond to the customer&apos;s registered email address?</inlineHelpText>
        <label>Responded to the registered email?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewing_Accounts__c</fullName>
        <inlineHelpText>Reviewing Accounts – If for any reason an account needs to be placed under review (arrangements and promise to pay for example), was this done correctly?</inlineHelpText>
        <label>Reviewing Accounts - Done Correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_comments__c</fullName>
        <inlineHelpText>Type in here the summary of the case</inlineHelpText>
        <label>Summary comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephony_skills__c</fullName>
        <inlineHelpText>Did the agent pause call recording when taking card details and un-pause to allow remainder of the call to be recorded?</inlineHelpText>
        <label>Telephony skills displayed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thanks_the_customer_for_his_her_email__c</fullName>
        <inlineHelpText>Thanks the customer for his/her email</inlineHelpText>
        <label>Thanks the customer for his/her email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uses_correct_grammar_spelling_phrasing__c</fullName>
        <inlineHelpText>Uses correct grammar, spelling and phrasing</inlineHelpText>
        <label>Uses correct grammar, spelling, phrasing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WAS_THE_CALL_COMPLIANT_Full_DPA_etc__c</fullName>
        <inlineHelpText>WAS THE CALL COMPLIANT? Full DPA, hardship dealt with correctly, avoided financial advise, didn&apos;t record card details</inlineHelpText>
        <label>WAS THE CALL COMPLIANT? Full DPA etc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WITHDRAWN_Coll1_letter_sent_in_time__c</fullName>
        <inlineHelpText>WITHDRAWN - Was the Collections 1 letter sent within the correct time frame?</inlineHelpText>
        <label>WITHDRAWN Coll1 letter sent in time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WITHDRAWN_Contacted_after_missed_payment__c</fullName>
        <inlineHelpText>WITHDRAWN - Was the borrower called and emailed after missing a payment?</inlineHelpText>
        <label>WITHDRAWN Contacted after missed payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Data_Protection_Policy_adhered_to__c</fullName>
        <inlineHelpText>Was Data Protection Policy adhered to? 3 or more security questions. E.g. Full name, DOB, email address, postcode.</inlineHelpText>
        <label>Was Data Protection Policy adhered to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Set_to_default_noted_on_the_accoun__c</fullName>
        <inlineHelpText>FORMAL DEMAND- Was &apos;Set to default&apos; noted on the account.</inlineHelpText>
        <label>&apos;Set to default&apos; noted on the account ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_3month_review_put_in_place__c</fullName>
        <inlineHelpText>Was a 3 month review put in place?</inlineHelpText>
        <label>Was a 3month review put in place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_fair_acceptable_outcome_reached__c</fullName>
        <inlineHelpText>Outcome - Was a fair and acceptable outcome reached for the customer?</inlineHelpText>
        <label>Was a fair &amp; acceptable outcome reached?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_written_NOD_sent_t__c</fullName>
        <inlineHelpText>DEFAULT NOTICE - Was a written &apos;Notice of default&apos; sent two weeks before defaulting the account?</inlineHelpText>
        <label>Was a written &apos;NOD sent  2 weeks before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_all_correspondence_noted_on_admin__c</fullName>
        <inlineHelpText>INSOLVENCY- Was all correspondence noted on admin, scanned and filed for reference ?</inlineHelpText>
        <label>Was all correspondence noted on admin ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_all_postal_correspondence_received__c</fullName>
        <inlineHelpText>Correspondence – Was all postal correspondence received and created relating to accounts scanned and saved to the individual correspondence folder?</inlineHelpText>
        <label>Was all postal correspondence received ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_account_over_4_months_in_arrears__c</fullName>
        <inlineHelpText>DEFAULT NOTICE- Was the account over 4 months in arrears before default notice was given?</inlineHelpText>
        <label>Was the account over 4 months in arrears</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_account_set_to_default_status_a__c</fullName>
        <inlineHelpText>INSOLVENCY- Was the account set to default status after receiving confirmation from DMC or Insolvency Service?</inlineHelpText>
        <label>Account set to default status after DMC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_agent_actively_listening__c</fullName>
        <inlineHelpText>ACTIVE LISTENING: Was the agents actively listening to the customer? I.e. Did the agent or customer have to repeat themselves due to lack of listening?</inlineHelpText>
        <label>Was the agent actively listening ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_email_compliant__c</fullName>
        <inlineHelpText>Was the email compliant?</inlineHelpText>
        <label>Was the email compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_review_date_set_accordingly__c</fullName>
        <inlineHelpText>Was the review date set accordingly? This should be in line with when the first repayment is due</inlineHelpText>
        <label>Was the review date set accordingly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_the_correct_confirmation_letters_se__c</fullName>
        <inlineHelpText>Were the correct confirmation letters sent via post and email with details of how to set payment up?</inlineHelpText>
        <label>Correct confirmation letters sent/email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawn_CollectionsCalculation__c</fullName>
        <formula>IF(ISPICKVAL( WITHDRAWN_Contacted_after_missed_payment__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( WITHDRAWN_Coll1_letter_sent_in_time__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CASE_NOTES_Accurate_header_in_caps_etc__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CASE_NOTES_3rd_party_authority_noted__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( PAYMENT_Part_Promise_acc_review_on_time__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( PAYMENT_correct_payment_and_amount__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( Collections_status_review_date_set__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COLLECTIONS_Letter_2_sent_in_time_frame__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COLLECTIONS_Letter_3_sent_if_appropriate__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COLLECTIONS_Was_NOSA_sent_once_2mnth_arr__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COLLECTIONS_Was_DCA_email_sent_correctly__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CRS_Sent_over_at_the_right_time__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CRS_Correct_info_added_to_admin__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( CRS_2_month_review_set_after_referred__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FINANCIAL_DIFFICULTIES_On_hold_30days__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FINANCIAL_DIFFICULTIES_Email_Letter_sent__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FINANCIAL_DIFFICULTIES_imp_key_info_note__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( FINANCIAL_DIFFICULTIES_Step_Change__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL( COMPLIANCE_Was_case_management_Compliant__c  , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withdrawn/CollectionsCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdrawn_CollectionsPercent__c</fullName>
        <formula>Withdrawn_CollectionsCalculation__c /18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withdrawn/CollectionsPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X10_comments__c</fullName>
        <label>10.comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X11_comments__c</fullName>
        <label>11.comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12_comments__c</fullName>
        <label>12.comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_party_info_obtained_and_updated__c</fullName>
        <inlineHelpText>Was 3rd party information obtained and updated in important information note?</inlineHelpText>
        <label>3rd party info obtained and updated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZopaArrCalculation__c</fullName>
        <formula>IF(ISPICKVAL(  Are_the_arrangement_notes_accurate__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Manage_payment_plan_section_updated__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Was_the_review_date_set_accordingly__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Were_the_correct_confirmation_letters_se__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Emailed_called_in_line_with_policy__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Death_certificate_requested__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Correct_letter_email_sent_after_closure__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Arrangement_cancelled_or_closed_before__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  FINANCIAL_DIFFICULTIES_account_on_hold__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  FINANCIAL_DIFFICULTIES_key_info__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  COMPLIANCE_Was_case_management_Compliant__c  , &quot;No&quot;),0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZopaArrCalculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZopaArrPercent__c</fullName>
        <formula>ZopaArrCalculation__c /10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZopaArrPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>correct_letters_and_completed_proxy_form__c</fullName>
        <inlineHelpText>INSOLVENCY- Were the correct letters and completed proxy forms returned to DMC in the given time frame?</inlineHelpText>
        <label>Correct correspondence returned to DMC ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>polite_and_professional_manner__c</fullName>
        <inlineHelpText>Did the agent display a polite and professional manner throughout the call and avoid interruping or talking over the customer?</inlineHelpText>
        <label>polite and professional manner ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <label>Collections Quality Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Collections_Agent_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>InboundPercent__c</columns>
        <columns>OutboundPercent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Collections</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Collections Quality Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Quality Checks</pluralLabel>
    <recordTypes>
        <fullName>Collections_Inbound_Call</fullName>
        <active>true</active>
        <description>Collections inbound call check</description>
        <label>Collections Inbound Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collections_Outbound_Call</fullName>
        <active>true</active>
        <description>Collections Outbound Call check</description>
        <label>Collections Outbound Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMC_Arrangements_check</fullName>
        <active>true</active>
        <description>DMC Arrangements check for collections</description>
        <label>DMC Arrangements check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deceased_Collections_Check</fullName>
        <active>true</active>
        <description>Deceased Collections Check</description>
        <label>Deceased Collections Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_Process_check</fullName>
        <active>true</active>
        <description>Default Process collections checks</description>
        <label>Default Process check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Departmental_Case_Review</fullName>
        <active>true</active>
        <description>Departmental Case Review collections</description>
        <label>Departmental Case Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Response_Review</fullName>
        <active>true</active>
        <description>Email Response Review Collections Check</description>
        <label>Email Response Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Withdrawn_Collections</fullName>
        <active>true</active>
        <description>Withdrawn/Collections case check</description>
        <label>Withdrawn/Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zopa_Arrangements</fullName>
        <active>true</active>
        <description>Zopa Arrangements check</description>
        <label>Zopa Arrangements</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Case_Number_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Case__c)  || ISBLANK( Account__c)</errorConditionFormula>
        <errorMessage>You must associate a report with a case or with an account</errorMessage>
    </validationRules>
</CustomObject>